// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component StatusBar StatusBar  renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "height": null,
      },
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
/>
`;

exports[`component StatusBar StatusBar  snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "height": null,
      },
      Object {
        "backgroundColor": "#fff",
      },
    ]
  }
>
  <StatusBar
    animated={false}
    backgroundColor="#fff"
    barStyle="dark-content"
    showHideTransition="fade"
    translucent={true}
  />
</View>
`;
